--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -78,7 +78,10 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
   repo: git@github.com:xianfengsong/xianfengsong.github.io.git
+  branch: master 
+- type: git
+  repo: git@140.143.79.55:/home/git/repo/blog.git
   branch: master
   message: 
